kgateway/kgateway/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nodejs-app
  namespace: demo
spec:
  parentRefs:
  - name: http
    namespace: kgateway-system
  hostnames:
  - "node.dash0-examples.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: nodejs-app
      port: 3000
